tests/e2e/service_output_readonly.error
Error: syntax error in story at line 2, column 5

2|        event = 2
          ^^^^^^^

E0100: Can't assign `int` to `Object`
